force-app/objects/NPS_Event__e/NPS_Event__e.object-meta.xml
<CustomObject>
    <description>Net Promoter Score Event</description>
    <label>NPS Event</label>
    <pluralLabel>NPS Events</pluralLabel>
</CustomObject>