force-app/objects/NPS_Event__e/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>