force-app/objects/NPS_Event__e/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>Net Promoter Score</description>
    <label>NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>