force-app/objects/NPS_Event__e/fields/NPS_Text__c.field-meta.xml
<CustomField>
    <fullName>NPS_Text__c</fullName>
    <label>NPS (Text)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>