force-app/objects/NPS_Event__e/fields/Survey_Invitation_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation_ID__c</fullName>
    <label>Survey Invitation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>